@@ -1,4 +1,7 @@
 * Dialer (ECCP): fixed bug in which a transfer request of an incoming campaign
+  call into an outgoing campaign queue results in a new incoming agentlinked 
+  message.
+* Dialer (ECCP): fixed bug in which a transfer request of an incoming campaign
   call into a incoming campaign queue (the same one the call came from or a 
   different one) results in an agentunlinked event with an incomplete agent
   number. 
